<resources>
    <string name="app_name">AnasDroWeatherMVP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="city">City</string>
    <string name="nextDays">Next days</string>
    <string name="tWeather">t</string>
    <string name="pressure">pressure</string>
    <string name="wind">wind</string>
    <string name="description">Description</string>
    <string name="select">select</string>
    <string name="temperatureTextView">temperature</string>
    <string name="soon">Soon</string>
    <string name="firstSoon">FirstSoon</string>
    <string name="sndSoon">SecondSoon</string>
    <string name="thrdSoon">ThirdSoon</string>
    <string name="settings">Settings</string>

    <string name="chooseCity">Choose a city</string>
    <string name="display">Display</string>
    <string name="addNewCity">Add new city</string>
    <string name="autoThemeOnOff">Сhange theme automatically</string>

    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="search_history">Search history</string>

    <string name="moscow">Moscow</string>
    <string name="spb">S.-Petersburg</string>
    <string name="kazan">Kazan</string>
    <string name="sochi">Sochi</string>

    <string name="tempMax">Max</string>
    <string name="tempMin">Min</string>


    <string name="tomorrow">Tomorrow</string>
    <string name="anotehrDay">Another day</string>
    <string name="enterCity">Enter city</string>

    <string name="connectionError">Connection error</string>
    <string name="adviceConnectonError">Check network connection</string>

    <string name="cityError">City Error</string>
    <string name="adviceCityError">Check the city name</string>

    <string name="noData">No data</string>
    <string name="network_error">Network Error</string>

    <string name="date">Date</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>

    <string name="searchHistory">Search history</string>
    <string name="receiverTitleAir">Airplane mode</string>
    <string name="receiverTitleNetworkLost">connection is lost</string>
    <string name="receiverTitleNetworkOk">connection is restored</string>
    <string name="receiverTitleBatteryLow">Low battery</string>
    <string name="receiverTitleOKBattery">Battery OK</string>
    <string name="weathBuCoordBtn">Weather by location</string>

</resources>
