<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/text_selectCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/chooseCity"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerForSlideShow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Switch
        android:id="@+id/autoThemeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoThemeOnOff"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <Button
        android:id="@+id/addNewCityBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:text="@string/addNewCity" />

    <TextView
        android:id="@+id/dispSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <CheckBox
        android:id="@+id/windCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/wind"
        />

    <CheckBox
        android:id="@+id/pressuCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:clickable="true"
        android:text="@string/pressure"
        android:focusable="true" />

</LinearLayout>