<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/tTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soon"
                android:layout_gravity="center"
                android:textSize="16sp" />
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/f_soonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:gravity="center"
                android:text="@string/firstSoon"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/s_soonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:gravity="center"
                android:text="@string/sndSoon"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/th_soonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="8"
                android:gravity="center"
                android:text="@string/thrdSoon"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:ems="8"
                android:id="@+id/f_soonTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noData"/>

            <TextView
                android:ems="8"
                android:id="@+id/s_soonTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noData" />

            <TextView
                android:ems="8"
                android:id="@+id/th_soonTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/noData" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/fSoonWeathImg"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:gravity="center"
                fresco:placeholderImage="@drawable/ic_launcher_foreground" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sSoonWeathImg"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:gravity="center"
                fresco:placeholderImage="@drawable/ic_launcher_foreground" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/thSoonWeathImg"
                android:layout_width="20dp"
                android:layout_height="70dp"
                android:gravity="center"
                fresco:placeholderImage="@drawable/ic_launcher_foreground" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fDescriptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView" />

            <TextView
                android:id="@+id/sDescriptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView" />

            <TextView
                android:id="@+id/thDescriptText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="TextView" />
        </TableRow>
    </TableLayout>
</LinearLayout>