<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/nextDaysText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nextDays" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                />

            <TextView
                android:id="@+id/firstDayTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/scndDayTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/trdDayTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:gravity="center"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/morningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/morning" />

            <TextView
                android:id="@+id/firstDayMorningTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/scndDayMorningTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/trdDayMorningTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/afternoonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/afternoon"/>

            <TextView
                android:id="@+id/firstDayAftTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/scndDayAftTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/trdDayAftTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/eveningText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/evening" />
            <TextView
                android:id="@+id/firstDayEvTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/scndDayEvTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"/>

            <TextView
                android:id="@+id/trdDayEvTempText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:gravity="center"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>