<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.geekbrains.anasdroweather2.ui.home.ThermometerView
        android:id="@+id/thermometerView"
        android:layout_width="40dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:level="70"
        fresco:layout_constraintVertical_bias="0.427" />


    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/city"
        android:textSize="20sp"
        fresco:layout_constraintBottom_toTopOf="@+id/curWeathImg"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintHorizontal_bias="0.289"
        fresco:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintTop_toTopOf="parent"
        fresco:layout_constraintVertical_bias="0.949" />

    <TextView
        android:id="@+id/windTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noData"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toBottomOf="parent"
        fresco:layout_constraintEnd_toStartOf="@+id/pressureTextView"
        fresco:layout_constraintHorizontal_bias="0.68"
        fresco:layout_constraintStart_toEndOf="@+id/descriptTextView"
        fresco:layout_constraintTop_toBottomOf="@+id/tTextView"
        fresco:layout_constraintVertical_bias="0.114" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="@string/noData"
        android:textSize="16sp"
        fresco:layout_constraintBottom_toBottomOf="@+id/windTextView"
        fresco:layout_constraintEnd_toEndOf="@+id/temperatureTextView"
        fresco:layout_constraintTop_toTopOf="@+id/windTextView"
        fresco:layout_constraintVertical_bias="0.0" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/curWeathImg"
        android:layout_width="78dp"
        android:layout_height="81dp"

        fresco:layout_constraintBottom_toBottomOf="parent"
        fresco:layout_constraintEnd_toStartOf="@+id/tTextView"
        fresco:layout_constraintHorizontal_bias="0.32"
        fresco:layout_constraintStart_toEndOf="@+id/thermometerView"
        fresco:layout_constraintTop_toTopOf="parent"
        fresco:layout_constraintVertical_bias="0.436"
        fresco:placeholderImage="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/tTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tWeather"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fresco:layout_constraintHorizontal_bias="0.585"
        fresco:layout_constraintVertical_bias="0.431" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/noData"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fresco:layout_constraintHorizontal_bias="0.341"
        fresco:layout_constraintStart_toEndOf="@+id/tTextView"
        fresco:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/descriptTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        fresco:layout_constraintEnd_toEndOf="parent"
        fresco:layout_constraintHorizontal_bias="0.26"
        fresco:layout_constraintTop_toBottomOf="@+id/curWeathImg"
        fresco:layout_constraintVertical_bias="0.034" />

</androidx.constraintlayout.widget.ConstraintLayout>